--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -46,24 +46,24 @@
 
     <ImageButton
         android:id="@+id/down_arrow"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
+        android:layout_width="60"
+        android:layout_height="60"
+        android:layout_marginEnd="110dp"
         android:layout_marginTop="8dp"
         android:onClick="decreaseCombatPower"
-        app:layout_constraintEnd_toEndOf="@+id/CombatPowerView"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/CombatPowerView"
         app:srcCompat="@android:drawable/arrow_down_float" />
 
 
     <ImageButton
         android:id="@+id/up_arrow"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
+        android:layout_width="60"
+        android:layout_height="60"
+        android:layout_marginStart="110dp"
         android:layout_marginTop="8dp"
         android:onClick="increaseCombatPower"
-        app:layout_constraintStart_toStartOf="@+id/CombatPowerView"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/CombatPowerView"
         app:srcCompat="@android:drawable/arrow_up_float" />
 
@@ -79,5 +79,19 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
+
+    <Button
+        android:id="@+id/button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:text="@string/nfcAdd"
+        app:layout_constraintBottom_toTopOf="@+id/navigation"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/CombatPowerView" />
 
 </android.support.constraint.ConstraintLayout>
